using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants 
{
    public const string ANIM_RUN = "Run";
    public const string ANIM_IDLE = "Idle";
    public const string ANIM_DANCE = "Dance";
    public const string PLAYER = "Player";
    public const string TAG_STAGE = "Stage";
    public const string TAG_STEP = "Step";
    public const string TAG_LEVELBRICK = "Level Brick";
    public const string TAG_WINSTAGE = "Win Stage";
    public const float CHARACTER_HEIGHT = 6f;
}
